--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
+						<li><a href="left-sidebar.html">Barra izquierda</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
@@ -69,7 +69,7 @@
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3>Bla bla bla</h3>
+						<h3>Bla BLA bla</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
 						<a href="#" class="button button-style1">Read More</a>
 					</section>
