--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -30,7 +30,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li class="active"><a href="left-sidebar.html">Left Sidebar</a></li>
+						<li class="active"><a href="left-sidebar.html">Barra izquierda</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
