--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -26,6 +26,7 @@
 	<!-- Header -->
 		<div id="header">
 			<div></div>
+			<div></div>
 			<div id="nav-wrapper"> 
 				<!-- Nav -->
 				<nav id="nav">
