Primeros cambios dia 2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 	</head>
 	<body class="homepage">
 			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
 
 	<!-- Header -->
 		<div id="header">
